# canslim-scanner

./: .gitignore  README.md  canslim.example.yaml  canslim.yaml  canslim_hk.yaml  positions.example.yaml  positions.yaml  pyproject.toml  tickers.txt
canslim/: __main__.py  accumulation.py  charts.py  cli.py  config.py  dashboard.py  deepdive.py  models.py  monitor.py  pdf.py  positions.py  report.py  scanner.py
canslim/criteria/: __init__.py  a_annual.py  base.py  c_current.py  i_institutional.py  l_leader.py  m_market.py  n_new_high.py  s_supply_demand.py
canslim/normalization/: __init__.py  base.py  rules.py
canslim/patterns/: __init__.py  ascending_triangle.py  base.py  consolidation.py  cup_handle.py  double_bottom.py  flat_base.py  high_tight_flag.py  saucer.py  three_weeks_tight.py
canslim/providers/: __init__.py  base.py  cache.py  fmp_provider.py  sec_provider.py  yfinance_provider.py
canslim/templates/: report.html
canslim/universe/: __init__.py  base.py  custom.py  hk_hscei.py  hk_hsi.py  sp500.py  us_all.py
docs/: index.html
docs/runs/2026-05-10_160738/: index.html
docs/runs/2026-05-12_000058/: index.html
docs/runs/2026-05-13_003852/: index.html
docs/runs/2026-05-14_225336/: index.html
tests/: test_accumulation.py  test_cache.py  test_criteria.py  test_monitor.py  test_normalization.py  test_patterns.py  test_scanner_integration.py
