[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canslim"
version = "0.1.0"
description = "CANSLIM stock scanner with pluggable data providers and criteria."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "canslim contributors" }]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "lxml>=5.0",
    "matplotlib>=3.8",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
canslim = "canslim.cli:app"

[project.entry-points."canslim.criteria"]
c = "canslim.criteria.c_current:CurrentEarnings"
a = "canslim.criteria.a_annual:AnnualEarnings"
n = "canslim.criteria.n_new_high:NewHigh"
s = "canslim.criteria.s_supply_demand:SupplyDemand"
l = "canslim.criteria.l_leader:Leader"
i = "canslim.criteria.i_institutional:Institutional"
m = "canslim.criteria.m_market:MarketDirection"

[tool.setuptools.packages.find]
include = ["canslim*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not slow'"
markers = [
    "slow: integration tests that hit live APIs",
]
